fix(dropdown): fix dropdown visibility when closed

--- a/modules/dropdown/scss/_dropdown.scss
+++ b/modules/dropdown/scss/_dropdown.scss
@@ -28,7 +28,8 @@
     border-radius: $base-round;
     background-color: $white;
     text-align: left;
-    opacity: 0;
+    visibility: hidden;
+    opacity: 0;    
     overflow: auto;
     @include elevation(8);
 
